<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.location.openweathermap.map.viewmodel.MapViewModel" />
        <variable
            name="locationWeather"
            type="com.location.openweathermap.model.domain.LocationWeatherModel" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cityBottomSheetLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/surface_color"
        android:padding="0dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">







                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="@dimen/_10sdp"
                    android:text="@{locationWeather.name}"
                    android:textColor="@color/rain"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Amsterdam" />

                <View
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:background="@color/secondary_variant_color"
                    app:layout_constraintEnd_toEndOf="@+id/name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/maxMin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@{String.format(@string/max_min, locationWeather.tempMax, locationWeather.tempMin)}"
                    android:textColor="@color/color_on_surface"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/name"
                    app:layout_constraintTop_toBottomOf="@+id/name"
                    tools:text="@string/max_min" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@{String.format(@string/temp, locationWeather.temp)}"
                    android:textColor="@color/error_color"
                    android:textSize="@dimen/_20sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/maxMin"
                    tools:text="@string/temp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@{locationWeather.weatherDescription}"
                    android:textColor="@color/color_on_surface"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/temp"
                    tools:text="@string/description" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:drawableStart="@drawable/ic_humidity"
                    android:drawablePadding="@dimen/_10sdp"
                    android:text="@{String.format(@string/humidity, locationWeather.humidity)}"
                    android:textColor="@color/color_on_surface"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description"
                    tools:text="@string/humidity" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/overview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text="@{String.format(@string/overview, locationWeather.temp, locationWeather.feelsLike, locationWeather.windSpeed, locationWeather.pressure)}"
                    android:textColor="@color/color_on_surface"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/humidity"
                    tools:text="@string/overview" />




            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </com.google.android.material.card.MaterialCardView>
</layout>
